изменен способ обозначения компонентов из-за несовмстимости с ie8

--- a/example/views/main/index.xhtml
+++ b/example/views/main/index.xhtml
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:sf="sf-component">
+<html>
 <head>
    <title>{{=it.title}}</title>
    <link rel="stylesheet" href="/views/main/css/styles.css"/>
