предварительная компиляция *.less файлов в режиме production

--- a/example/components/ex/Button/Button.less
+++ b/example/components/ex/Button/Button.less
@@ -1,3 +1,8 @@
+/**
+ * путь относительный папки components
+ * @import "/ex/TestCompound/TestCompound.less";
+ */
+
 .ex-Button{
    background: transparent;
    border : 1px solid black;
