--- a/example/components/ex/TestCompound/TestCompound.html
+++ b/example/components/ex/TestCompound/TestCompound.html
@@ -1,3 +1,3 @@
 <div class="ex-TestCompound">
-   <component data-component="ex.Button" config='{"caption" : "{{=it.caption}}"}'/>
+   <component data-component="ex.Button" name="btn" config='{"caption" : "{{=it.caption}}"}'/>
 </div>
